<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/white"
    android:layout_gravity="center"
    tools:context=".jugador.viewActivities.activitiesAuth.ActivityLogin">


    <View
        android:id="@+id/background_view"
        android:layout_width="419dp"
        android:layout_height="376dp"
        android:background="#11A3BD"
        app:layout_constraintBottom_toTopOf="@+id/contenedor"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:background="@drawable/border"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="131dp"
            android:layout_height="87dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/id_correo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_correo"
            android:drawablePadding="12dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:padding="12dp" />


        <EditText
            android:id="@+id/id_contrasena"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_contrasena"
            android:drawableEnd="@drawable/ic_ver_contra"
            android:drawablePadding="12dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="12dp" />

        <TextView
            android:id="@+id/texto_olvidaste_contrasena"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/olvidarContra"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_loginn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/unselected_color"
            android:textColorHint="@color/white"
            android:text="@string/iniciarSesion"/>

        <TextView
            android:id="@+id/texto_crear_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/sinCuenta"
            android:textColor="@color/black" />



    </LinearLayout>

    <TextView
        android:id="@+id/texto_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>