<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.fragments.perfilFragments.PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <View
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#11A3BD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/foto_perfil_image_view"
            android:layout_width="105dp"
            android:layout_height="97dp"
            android:layout_marginTop="28dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Nombre y Teléfono -->

        <ImageView
            android:id="@+id/camara_icono_image_view"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="124dp"
            android:background="@drawable/camera"
            app:layout_constraintBottom_toBottomOf="@+id/foto_perfil_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto_perfil_image_view"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/nombre_telefono_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/camara_icono_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/nombre_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fabio Cruz"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/telefono_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tel: +312-567-9081"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="4dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_telefono_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F6F3F3"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/link_editar_perfil"
                    android:drawableStart="@drawable/baseline_edit_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/editar_perfil"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/link_cambiar_contrasena"
                    android:layout_width="wrap_content"
                    android:drawableStart="@drawable/contrasena"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/cambiar_contrasena"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/link_mis_equipos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/equipo"
                    android:layout_marginBottom="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/mis_equipos"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/link_salir"
                    android:drawableStart="@drawable/cerrar_sesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/salir"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>